--- a/index.html
+++ b/index.html
@@ -1077,7 +1077,7 @@
                 
                 <div class="feature-item fade-in">
                     <div class="feature-image">
-                        <img src="./img/landingpage/musangking-sau-rieng-co-tam (29).jpg" alt="Sầu riêng hạt lép">
+                        <img src="./img/landingpage/musangking-sau-rieng-co-tam (29).JPG" alt="Sầu riêng hạt lép">
                     </div>
                     <div class="feature-content">
                         <div class="feature-icon">🌱</div>
@@ -1387,4 +1387,5 @@
         });
     </script>
 </body>
+
 </html>
