--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
         /* Video Section */
         .video-section {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('./img/landingpage/musangking-sau-rieng-co-tam\ \(26\).jpg');
+            background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url('./img/landingpage/bg1.jpg');
             background-size: cover;
             background-position: center;
             padding: 120px 0 80px;
@@ -1389,3 +1389,4 @@
 </body>
 
 </html>
+
