--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <meta property="og:url" content="https://sauriengmusangkingcotam.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sầu Riêng Musangking Cô Tâm">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -1630,7 +1631,7 @@
                             scrolling="no" 
                             frameborder="0" 
                             allowfullscreen="true" 
-                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" loading="lazy">
                         </iframe>
                     </div>
                     <div class="video-info">
@@ -1648,7 +1649,7 @@
                             scrolling="no" 
                             frameborder="0" 
                             allowfullscreen="true" 
-                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" loading="lazy">
                         </iframe>
                     </div>
                     <div class="video-info">
@@ -1666,7 +1667,7 @@
                             scrolling="no" 
                             frameborder="0" 
                             allowfullscreen="true" 
-                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share">
+                            allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share" loading="lazy">
                         </iframe>
                     </div>
                     <div class="video-info">
@@ -1860,5 +1861,6 @@
 </body>
 
 </html>
+
 
 
