--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sầu Riêng Musangking Cô Tâm - Cao Cấp Tự Nhiên</title>
+    <title>Sầu Riêng Musangking Cô Tâm - Thượng Hạng Chín Tự Nhiên</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- Thêm vào head -->
     <meta name="description" content="Sầu Riêng Musangking Cô Tâm - Sầu riêng chín cây tự nhiên 100%, cơm vàng hạt lép, vị ngọt đậm đà. Giao hàng tận nơi TP.HCM trong 2h. Đặt ngay 0978 212 783">
@@ -1861,6 +1861,7 @@
 </body>
 
 </html>
+
 
 
 
