--- a/index.html
+++ b/index.html
@@ -649,21 +649,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             transform: scaleX(1);
         }
 
-        /* Ribbon cho card nổi bật */
-        .pricing-card:first-child::before {
-            content: 'PHỔ BIẾN NHẤT';
-            position: absolute;
-            top: 20px;
-            right: -30px;
-            background: linear-gradient(135deg, #FF6B6B, #FF8E8E);
-            color: white;
-            padding: 8px 40px;
-            font-size: 0.8rem;
-            font-weight: 700;
-            transform: rotate(45deg);
-            z-index: 2;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-        }
+     
         /* Animation cho pricing cards */
         .pricing-card {
             animation: fadeInUp 0.8s ease forwards;
@@ -1852,7 +1838,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             <!-- Tab Content -->
             <div class="tab-content">
                   <!-- Tab 2: Musangking Miền Đông -->
-                <div class="tab-pane" id="musangking-dong">
+                <div class="tab-pane active" id="musangking-dong">
                     <div class="gallery-grid">
                         <div class="gallery-item fade-in">
                             <img src="./img/miendong/sau-rieng-musangking-tai-hcm (1).jpg" alt="Musangking Miền Đông - Cơm vàng đậm" loading="lazy">
@@ -1934,7 +1920,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                     </div>
                 </div>
                 <!-- Tab 1: RI6 -->
-                <div class="tab-pane active" id="ri6">
+                <div class="tab-pane " id="ri6">
                     <div class="gallery-grid">
                         <div class="gallery-item fade-in">
                             <img src="./img/ri6/sau-rieng-ri-6-mien-tay (1).JPG" alt="Sầu riêng RI6 - Cơm vàng dẻo" loading="lazy">
@@ -1998,7 +1984,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                 <!-- Card 1: Musangking Miền Đông – Trung – Tây Nguyên -->
                 <div class="pricing-card fade-in">
                     <div class="pricing-image">
-                        <img src="./img/pricing/musangking-dong-trung-taynguyen.jpg" alt="Sầu riêng Musangking Miền Đông Trung Tây Nguyên" loading="lazy">
+                        <img src="./img/miendong/giamiendong.jpg" alt="Sầu riêng Musangking Miền Đông Trung Tây Nguyên" loading="lazy">
                     </div>
                     <div class="pricing-header">
                         <h3>Musangking Miền Đông – Trung – Tây Nguyên</h3>
@@ -2020,7 +2006,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                 <!-- Card 2: Musangking Miền Tây -->
                 <div class="pricing-card fade-in">
                     <div class="pricing-image">
-                        <img src="./img/pricing/musangking-mientay.jpg" alt="Sầu riêng Musangking Miền Tây" loading="lazy">
+                        <img src="./img/mientay/giamientay.jpg" alt="Sầu riêng Musangking Miền Tây" loading="lazy">
                     </div>
                     <div class="pricing-header">
                         <h3>Musangking Miền Tây</h3>
@@ -2039,7 +2025,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                 <!-- Card 3: Ri6 Miền Đông & Tây -->
                 <div class="pricing-card fade-in">
                     <div class="pricing-image">
-                        <img src="./img/pricing/ri6-mien-dong-tay.jpg" alt="Sầu riêng Ri6 Miền Đông & Tây" loading="lazy">
+                        <img src="./img/ri6/giari6.jpg" alt="Sầu riêng Ri6 Miền Đông & Tây" loading="lazy">
                     </div>
                     <div class="pricing-header">
                         <h3>Ri6 Miền Đông & Tây</h3>
