--- a/index.html
+++ b/index.html
@@ -569,6 +569,8 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
         .product-tag {
             margin-bottom: 20px;
             text-align: center;
+            display: flex;
+            justify-content: center;
         }
 
         .tag-badge {
@@ -1991,9 +1993,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                     </div>
                     <div class="pricing-body">
                         <p>Sầu riêng Musangking Đắk Lắk, Khánh Hòa, Phú Yên... vị ngọt đậm, béo bùi, thơm ngào ngạt.</p>
-                        <div class="product-tag">
-                            <span class="tag-badge">Hàng nhất 4-5 hộc</span>
-                        </div>
+                     
                         <div class="pricing-price">
                             <div class="price-main">220k/kg</div>
                             <div class="price-note">Trái nguyên vỏ</div>
@@ -2041,6 +2041,9 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                     </div>
                 </div>
             </div>
+            <div class="product-tag">
+                            <span class="tag-badge">Hàng nhất 4-5 hộc</span>
+             </div>
         </div>
     </section>
 
