--- a/index.html
+++ b/index.html
@@ -571,6 +571,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             text-align: center;
             display: flex;
             justify-content: center;
+            padding-top: 2rem ;
         }
 
         .tag-badge {
