--- a/index.html
+++ b/index.html
@@ -1840,49 +1840,8 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             
             <!-- Tab Content -->
             <div class="tab-content">
-                  <!-- Tab 2: Musangking Miền Đông -->
-                <div class="tab-pane active" id="musangking-dong">
-                    <div class="gallery-grid">
-                        <div class="gallery-item fade-in">
-                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (1).jpg" alt="Musangking Miền Đông - Cơm vàng đậm" loading="lazy">
-                            <div class="image-overlay">
-                                <p>Musangking Đông - Cơm vàng đậm</p>
-                            </div>
-                        </div>
-                        <div class="gallery-item fade-in">
-                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (10).jpg" alt="Musangking Miền Đông - Múi dày" loading="lazy">
-                            <div class="image-overlay">
-                                <p>Musangking Đông - Múi dày cơm chắc</p>
-                            </div>
-                        </div>
-                        <div class="gallery-item fade-in">
-                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (12).jpg" alt="Musangking Miền Đông - Vàng nghệ" loading="lazy">
-                            <div class="image-overlay">
-                                <p>Musangking Đông - Vàng nghệ óng ánh</p>
-                            </div>
-                        </div>
-                        <div class="gallery-item fade-in">
-                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (15).jpg" alt="Musangking Miền Đông - Trái đẹp" loading="lazy">
-                            <div class="image-overlay">
-                                <p>Musangking Đông - Trái đều màu</p>
-                            </div>
-                        </div>
-                        <div class="gallery-item fade-in">
-                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (16).jpg" alt="Musangking Miền Đông - Cơm béo" loading="lazy">
-                            <div class="image-overlay">
-                                <p>Musangking Đông - Cơm béo ngậy</p>
-                            </div>
-                        </div>
-                        <div class="gallery-item fade-in">
-                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (6).jpg" alt="Musangking Miền Đông - Chất lượng cao" loading="lazy">
-                            <div class="image-overlay">
-                                <p>Musangking Đông - Chuẩn chất lượng</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                  <!-- Tab 3: Musangking Miền Tây -->
-                <div class="tab-pane" id="musangking-tay">
+                <div class="tab-pane active" id="musangking-tay">
                     <div class="gallery-grid">
                         <div class="gallery-item fade-in">
                             <img src="./img/mientay/sau-rieng-musangking-mien-tay (2).jpg" alt="Musangking Miền Tây - Cơm vàng rực" loading="lazy">
@@ -1922,6 +1881,48 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                         </div>
                     </div>
                 </div>
+                  <!-- Tab 2: Musangking Miền Đông -->
+                <div class="tab-pane " id="musangking-dong">
+                    <div class="gallery-grid">
+                        <div class="gallery-item fade-in">
+                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (1).jpg" alt="Musangking Miền Đông - Cơm vàng đậm" loading="lazy">
+                            <div class="image-overlay">
+                                <p>Musangking Đông - Cơm vàng đậm</p>
+                            </div>
+                        </div>
+                        <div class="gallery-item fade-in">
+                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (10).jpg" alt="Musangking Miền Đông - Múi dày" loading="lazy">
+                            <div class="image-overlay">
+                                <p>Musangking Đông - Múi dày cơm chắc</p>
+                            </div>
+                        </div>
+                        <div class="gallery-item fade-in">
+                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (12).jpg" alt="Musangking Miền Đông - Vàng nghệ" loading="lazy">
+                            <div class="image-overlay">
+                                <p>Musangking Đông - Vàng nghệ óng ánh</p>
+                            </div>
+                        </div>
+                        <div class="gallery-item fade-in">
+                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (15).jpg" alt="Musangking Miền Đông - Trái đẹp" loading="lazy">
+                            <div class="image-overlay">
+                                <p>Musangking Đông - Trái đều màu</p>
+                            </div>
+                        </div>
+                        <div class="gallery-item fade-in">
+                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (16).jpg" alt="Musangking Miền Đông - Cơm béo" loading="lazy">
+                            <div class="image-overlay">
+                                <p>Musangking Đông - Cơm béo ngậy</p>
+                            </div>
+                        </div>
+                        <div class="gallery-item fade-in">
+                            <img src="./img/miendong/sau-rieng-musangking-tai-hcm (6).jpg" alt="Musangking Miền Đông - Chất lượng cao" loading="lazy">
+                            <div class="image-overlay">
+                                <p>Musangking Đông - Chuẩn chất lượng</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
                 <!-- Tab 1: RI6 -->
                 <div class="tab-pane " id="ri6">
                     <div class="gallery-grid">
