--- a/index.html
+++ b/index.html
@@ -583,10 +583,10 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             font-size: 0.85rem;
             font-weight: 700;
             box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
-            animation: pulse 2s infinite;
+            animation: pulse2 2s infinite;
         }
 
-        @keyframes pulse {
+        @keyframes pulse2 {
             0% {
                 transform: scale(1);
                 box-shadow: 0 4px 15px rgba(255, 107, 107, 0.3);
