sửa hình đại diện

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="Sầu Riêng Musangking Cô Tâm - Thượng Hạng Chín Tự Nhiên">
     <meta property="og:description" content="Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm vàng hạt lép, ngọt đậm đà. Giao hàng tận nơi TP.HCM.">
-    <meta property="og:image" content="https://sauriengmusangkingcotam.com/img/og-image.jpg">
+    <meta property="og:image" content="https://sauriengmusangkingcotam.com/img/logo.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:url" content="https://sauriengmusangkingcotam.com/">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Sầu Riêng Musangking Cô Tâm">
@@ -26,9 +28,9 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Sầu Riêng Musangking Cô Tâm - CThượng Hạng Chín Tự Nhiên">
+    <meta name="twitter:title" content="Sầu Riêng Musangking Cô Tâm - Thượng Hạng Chín Tự Nhiên">
     <meta name="twitter:description" content="Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm vàng hạt lép, ngọt đậm đà. Giao hàng tận nơi TP.HCM.">
-    <meta name="twitter:image" content="https://sauriengmusangkingcotam.com/img/twitter-image.jpg">
+    <meta name="twitter:image" content="https://sauriengmusangkingcotam.com/img/logo.png">
 
     <!-- Structured Data - JSON-LD -->
     <script type="application/ld+json">
@@ -1368,7 +1370,16 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             font-size: 0.9rem;
             font-weight: 600;
         }
+        .price-note {
+            margin-top: 10px;
+            text-align: center;
+            color: #666;
+            font-style: italic;
+        }
 
+        .price-note small {
+            font-size: 13px;
+        }
         /* ========== RESPONSIVE STYLES ========== */
 
         /* Tablet */
@@ -2307,6 +2318,9 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             <div class="product-tag">
                             <span class="tag-badge">Hàng nhất 4-5 hộc</span>
              </div>
+             <div class="price-note">
+                <p><small>* Bảng giá thay đổi theo mùa, nghịch mùa sầu cao giá hơn mn thông cảm cho shop nhen.</small></p>
+            </div>
         </div>
     </section>
 
