--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
     "@context": "https://schema.org",
     "@type": "LocalBusiness",
     "name": "Sầu Riêng Musangking Cô Tâm",
-    "description": "Chuyên cung cấp sầu riêng Musangking cao cấp, chín cây tự nhiên 100%",
+    "description": "Chuyên cung cấp sầu riêng Musangking cao cấp, Thượng Hạng Chín Tự Nhiên",
     "url": "https://sauriengmusangkingcotam.com/",
     "telephone": "+84-978-212-783",
     "address": {
@@ -703,7 +703,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
         }
 
         .testimonial-image {
-            height: 180px;
+            height: 250px;
             overflow: hidden;
         }
 
@@ -1747,7 +1747,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             }
             
             .testimonial-image {
-                height: 150px;
+                height: 215px;
             }
             
             .testimonial-content {
