--- a/index.html
+++ b/index.html
@@ -1948,9 +1948,11 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             .videos-grid {
                 max-width: 320px;
             }
-            
+            .policy-icons{
+                    flex-flow: row;
+            }
             .policy-icon {
-                flex: 0 0 100%;
+                flex: 0 0 20%;
             }
             .hotline-text {
             display: none;
