--- a/index.html
+++ b/index.html
@@ -2290,7 +2290,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                 <!-- Card 1: Musangking Miền Đông – Trung – Tây Nguyên -->
                 <div class="pricing-card fade-in">
                     <div class="pricing-image">
-                        <img src="./img/miendong/giamiendong.jpg" alt="Sầu riêng Musangking Miền Đông Trung Tây Nguyên" loading="lazy">
+                        <img src="./img/miendong/sau-rieng-musangking-tai-hcm%20(16).jpg" alt="Sầu riêng Musangking Miền Đông Trung Tây Nguyên" loading="lazy">
                     </div>
                     <div class="pricing-header">
                         <h3>Musangking Miền Đông – Trung – Tây Nguyên</h3>
@@ -2377,7 +2377,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                     </div>
                     <div class="testimonial-content">
                         <div class="testimonial-stars">★★★★★</div>
-                        <p class="testimonial-author">- Chị Mỹ Uyên, Quận Tân Bình</p>
+                        <p class="testimonial-author">- Chị Nguyên Phạm, Quận Tân Bình</p>
                     </div>
                 </div>
                 
@@ -2387,7 +2387,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                     </div>
                     <div class="testimonial-content">
                         <div class="testimonial-stars">★★★★★</div>
-                        <p class="testimonial-author">- Chị Hương, Gò Vấp</p>
+                        <p class="testimonial-author">- Chị Hằng Nguyễn, Gò Vấp</p>
                     </div>
                 </div>
             </div>
