thêm code gg ads

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
     }
     </script>
 
-    
+  
  
 
     <style>
@@ -2741,9 +2741,21 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             });
         });
         </script>
+
+      <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17648048065">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'AW-17648048065');
+    </script>
 </body>
 
 </html>
+
 
 
 
