--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             line-height: 1.2;
             margin-bottom: 1rem;
         }
-
+        ul li{
+            list-style: none;
+        }
         p {
             margin-bottom: 1rem;
         }
@@ -1718,6 +1720,10 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
 
         .price-note small {
             font-size: 15px;
+        }
+        .footer-column a{
+            text-decoration: none;
+            color: white;
         }
         /* ========== RESPONSIVE STYLES ========== */
 
