--- a/index.html
+++ b/index.html
@@ -2831,7 +2831,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                         <a href="https://www.google.com/maps/place/S%E1%BA%A6U+RI%C3%8ANG+MUSANGKING+C%C3%94+T%C3%82M/@10.7851057,106.6445476,17z/data=!3m1!4b1!4m6!3m5!1s0x31752fd42a1335ab:0x7c3745e2b8d8dceb!8m2!3d10.7851057!4d106.6445476!16s%2Fg%2F11w322fldn?entry=ttu&g_ep=EgoyMDI1MTAyMi4wIKXMDSoASAFQAw%3D%3D" class="social-link" target="_blank">
                             <i class="fas fa-map-marker-alt"></i>
                         </a>
-                        <a href="https://www.tiktok.com/@cotammusangking.official" class="social-link" target="_blank">
+                        <a href="https://www.tiktok.com/@musangkingcotam.official" class="social-link" target="_blank">
                             <i class="fab fa-tiktok"></i>
                         </a>
                         <a href="https://zalo.me/0978212783" class="social-link" target="_blank">
@@ -2944,10 +2944,10 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
                         <a href="https://zalo.me/0978212783" class="social-link" target="_blank" title="Zalo">
                             <i class="fab fa-zalo">Z</i>
                         </a>
-                        <a href="https://www.tiktok.com/@cotammusangking.official" class="social-link" target="_blank" title="TikTok">
+                        <a href="https://www.tiktok.com/@musangkingcotam.official" class="social-link" target="_blank" title="TikTok">
                             <i class="fab fa-tiktok"></i>
                         </a>
-                        <a href="https://www.youtube.com/@sauriengmusangkingcotam" class="social-link" target="_blank" title="YouTube">
+                        <a href="https://www.youtube.com/@sauriengmusangkingcotam/shorts" class="social-link" target="_blank" title="YouTube">
                             <i class="fab fa-youtube"></i>
                         </a>
                     </div>
