--- a/index.html
+++ b/index.html
@@ -1379,13 +1379,13 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
         }
 
         /* Social Links */
-        .social-links {
+        .site-footer .social-links {
             display: flex;
             gap: 10px;
             margin: 10px 0 15px;
         }
 
-        .social-link {
+        .site-footer .social-link {
             display: inline-flex;
             align-items: center;
             justify-content: center;
@@ -1399,7 +1399,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             font-size: 0.9rem;
         }
 
-        .social-link:hover {
+        .site-footer .social-link:hover {
             background: var(--primary-yellow);
             color: var(--wood-brown);
             transform: translateY(-2px);
