--- a/index.html
+++ b/index.html
@@ -1383,6 +1383,7 @@ Sầu riêng Musangking cắt già chín cây tự nhiên, Tươi rói, cơm và
             display: flex;
             gap: 10px;
             margin: 10px 0 15px;
+            justify-content: left;
         }
 
         .site-footer .social-link {
